--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -8,15 +8,13 @@
     <string name="MenuHome">Home</string>
     <string name="MenuBla">Blä</string>
     <string name="MenuBlupp">Blüpp</string>
-    <string name="MenuBlipp">Blippp</string>
     <string name="openHam">openHam</string>
     <string name="closeHam">closeHam</string>
-
+    <string name="MenuImpressum">Impressum</string>
+    <string name="MenuLicense">Lizenz</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="doWhat">do what?</string>
-
-
 
 
 </resources>
