--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,12 +8,13 @@
     <string name="MenuHome">Home</string>
     <string name="MenuBla">Bla</string>
     <string name="MenuBlupp">Blupp</string>
-    <string name="MenuBlipp">Blipp</string>
+    <string name="MenuImpressum">Impressum</string>
+    <string name="MenuLicense">Lizenz</string>
     <string name="openHam">openHam</string>
     <string name="closeHam">closeHam</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="doWhat">do what?</string>
-
+    <!-- TODO: Remove or change this placeholder text -->
 
 
 </resources>
