--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">TickTrax-GEO</string>
-    <string name="MenuMe">Ich</string>
-    <string name="MenuGEO">GEO</string>
-    <string name="MenuSettings">Einstellungen</string>
-    <string name="MenuExport">Export</string>
-    <string name="MenuHome">Home</string>
-    <string name="MenuBla">Blä</string>
-    <string name="MenuBlupp">Blüpp</string>
-    <string name="openHam">openHam</string>
-    <string name="closeHam">closeHam</string>
-    <string name="MenuImpressum">Impressum</string>
-    <string name="MenuLicense">Lizenz</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="doWhat">do what?</string>
-
-
+    <string name="app_name">D-TickTrax-GEO</string>
+    <string name="MenuMe">D-me</string>
+    <string name="MenuGEO">D-geo</string>
+    <string name="MenuSettings">D-settings</string>
+    <string name="MenuExport">D-export</string>
+    <string name="MenuHome">D-Home</string>
+    <string name="HMenuSettings">D-Settings</string>
+    <string name="HMenuLog">D-Log</string>
+    <string name="HMenuCopy">D-Copyright</string>
+    <string name="HMenuLicense">D-Lizenz</string>
+    <string name="HMenuImpressum">D-Impressum</string>
+    <string name="openHam">D-openHam</string>
+    <string name="closeHam">D-closeHam</string>
+    <string name="doWhat">D-do what?</string>
+    <string name="ALog">D-Android-Log</string>
 </resources>
